--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-filterpy==1.4.5
-pandas==1.1.3
-opencv_python==4.5.3.56
 doit==0.33.1
-scipy==1.5.3
 numpy==1.17.4
+opencv_python==4.5.3.56
+matplotlib==3.3.2
+pandas==1.1.3
+scipy==1.5.3
+filterpy==1.4.5
+seaborn==0.11.0
+scikit_learn==1.0.2
